samples/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /test
    external-dns.alpha.kubernetes.io/hostname: mytestdomain2.example.com
  labels:
    app: myIngressLabel
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: test
              servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
